# ZaMP_lab2

./: Makefile  config.xml  interp  interp_etap2  opis_dzialan.txt  opis_programu.tex  start.sh
cmd/: przykladowe_polecenia.cmd
files/serwer-bez-tla-Qt6-cmake/: CZYTAJ.TO
files/serwer-bez-tla-Qt6-cmake/serwer_zrodla/: CMakeLists.txt
files/serwer-bez-tla-Qt6-cmake/serwer_zrodla/src/: gsv-WgViewer3D.cpp
inc/: ComChannel.hh  CommandInterpreter.hh  Cuboid.hh  Scene.hh  XMLReader.hh
plugin/: Makefile
plugin/inc/: Interp4Move.hh  Interp4Pause.hh  Interp4Rotate.hh  Interp4Set.hh
plugin/src/: Interp4Move.cpp  Interp4Pause.cpp  Interp4Rotate.cpp  Interp4Set.cpp
src/: ComChannel.cpp  CommandInterpreter.cpp  Cuboid.cpp  Scene.cpp  XMLReader.cpp  main.cpp  main.cpp.old  main2.cpp.old  main_etap2.cpp
